# bilbycast-edge

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE.commercial  NOTICE  NOTICE.full  README.md  SECURITY.md  build.rs  deny.toml  test_rtp_sender.py  tmp_pcr_injection.md
.cargo/: audit.toml
.github/: dependabot.yml
.github/codeql/: codeql-config.yml
.github/workflows/: ci.yml  codeql.yml  nightly-release.yml  security-audit.yml
assets/testgen_voice/: README.md
config_examples/: hls-output-youtube.json  manager-node1.json  manager-node2.json  multi-output-fanout.json  rtmp-output-twitch.json  rtp-to-srt.json  srt-to-rtp.json  test-auth.json  test-caller.json  test-config.json  test-fan-out.json  test-full-interop.json  test-hitless.json  test-interop.json  test-listener.json  test-multi-flow.json  test-trust-boundary.json  tr07-jpeg-xs.json  webrtc-output-whip.json
docs/: CONFIGURATION.md  INTEROP_TEST.md  api-reference.md  api-security.md  architecture.md  audio-gateway.md  bonded-relay-loopback-free.md  bonding-gateway-routing.md  bonding.md  cellular.md  clocking.md  cmaf.md  codec-matrix.md  configuration-guide.md  egress-dejitter-design.md  events-and-alarms.md  firewall.md  ingress-dejitter-design.md  installation.md  measurement-reference.md  metrics.md  mxl-handoff.md  mxl-integration-plan.md  nmos.md  pcr-injection-plan.md  production-tuning.md  ptp.md  replay.md  sdi.md  security.md  st2110.md  starlink.md  supported-protocols.md  testgen-voice.md  transcoding.md  trust-boundary-compliance.md  upgrade.md  wire-pacing.md
examples/: bond_route_smoke.rs
packaging/: 90-bilbycast-edge.conf  apparmor-local-ptp4l  bilbycast-cellular-modem.default  bilbycast-cellular-modem.service  bilbycast-edge.service  bilbycast-edge.sysusers  bilbycast-etf-qdisc@.service  bilbycast-ptp-gm.conf  bilbycast-ptp-gm.sh  bilbycast-ptp.default  bilbycast-ptp.logrotate  bilbycast-ptp.service  install-cellular-modem.sh  install-edge.sh  provision-edge-node.sh  setup-cellular-modem.sh  setup-etf-qdisc.sh  strict-binding.conf  uninstall-edge.sh
scripts/: build-manifest.sh  check-vendored-patch.sh
src/: lib.rs  main.rs
src/api/: auth.rs  errors.rs  flows.rs  inputs.rs  mod.rs  models.rs  nmos.rs  nmos_is05.rs  nmos_is08.rs  nmos_mdns.rs  nmos_registration.rs  outputs.rs  ptp.rs  server.rs  stats.rs  tunnels.rs  webrtc.rs  ws.rs
src/config/: audio_pids_serde.rs  crypto.rs  mod.rs  models.rs  persistence.rs  pid_map_serde.rs  pid_overrides_serde.rs  secrets.rs  validation.rs
src/display/: audio.rs  audio_bars.rs  audio_meter.rs  claim_registry.rs  clock.rs  hdr_tonemap.rs  kms.rs  mod.rs  rga_transfer.rs  rga_wrapper.h
src/engine/: audio_302m.rs  audio_decode.rs  audio_encode.rs  audio_silence.rs  audio_transcode.rs  av_quality_watch.rs  av_sync_mux.rs  bandwidth_monitor.rs  bandwidth_profile.rs  bond_leg_broker.rs  bond_leg_probe.rs  bond_leg_test.rs  bond_routing.rs  bonded_scheduler.rs  codec_thread.rs  dedicated_runtime.rs  degradation_monitor.rs  delay_buffer.rs  flow.rs  hardware_probe.rs  ingress_dejitter.rs  ingress_publisher.rs  ingress_smoothing.rs  input_bonded.rs  input_media_player.rs  input_mxl_anc.rs  input_mxl_audio.rs  input_mxl_video.rs  input_pcm_encode.rs  input_post_process.rs  input_replay.rs  input_rist.rs  input_rtmp.rs  input_rtp.rs  input_rtp_audio.rs  input_rtsp.rs  input_srt.rs  input_st2110_20.rs  input_st2110_23.rs  input_st2110_30.rs  (+68 more)
src/engine/cmaf/: box_writer.rs  cenc.rs  cenc_boxes.rs  codecs.rs  encode.rs  fmp4.rs  manifest.rs  mod.rs  nalu.rs  segmenter.rs  upload.rs
src/engine/content_analysis/: audio_full.rs  bitreader.rs  captions.rs  gop.rs  lite.rs  mdi.rs  mod.rs  scte35.rs  signalling.rs  timecode.rs  video_full.rs
src/engine/decklink/: domain.rs  mod.rs  status.rs
src/engine/input_media_player/: image_slate.rs  mp4_demux.rs
src/engine/mxl/: ancillary.rs  audio.rs  domain.rs  grain_clock.rs  mod.rs  video.rs
src/engine/rtmp/: amf0.rs  chunk.rs  client.rs  flv.rs  handshake.rs  mod.rs  server.rs  session.rs  ts_mux.rs
src/engine/st2110/: ancillary.rs  audio.rs  captions.rs  hwts.rs  mod.rs  pacer.rs  ptp.rs  redblue.rs  scte104.rs  sdp.rs  timecode.rs  timeline.rs  video.rs
src/engine/webrtc/: mod.rs  rtp_h264.rs  rtp_h264_depack.rs  session.rs  signaling.rs  ts_demux.rs
src/fec/: decoder.rs  encoder.rs  matrix.rs  mod.rs
src/manager/: client.rs  config.rs  events.rs  link_state.rs  mod.rs
src/media/: mod.rs  probe.rs
src/monitor/: dashboard.html  dashboard.rs  mod.rs  server.rs
src/observability/: log_shipper.rs  mod.rs
src/redundancy/: duplicator.rs  merger.rs  mod.rs
src/replay/: clips.rs  export.rs  export_mp4.rs  filmstrip.rs  index.rs  mod.rs  paced_replayer.rs  reader.rs  recordings.rs  writer.rs
src/setup/: handlers.rs  mod.rs  wizard.rs
src/srt/: connection.rs  mod.rs  stats.rs
src/stats/: av_interleave.rs  av_skew.rs  av_sync.rs  collector.rs  mod.rs  models.rs  pcr_trust.rs  throughput.rs
src/tunnel/: auth.rs  config.rs  crypto.rs  manager.rs  mod.rs  protocol.rs  quic.rs  relay_client.rs  tcp_forwarder.rs  udp_forwarder.rs  udp_relay_client.rs
src/upgrade/: apply.rs  download.rs  manifest.rs  mod.rs  state.rs  trust.rs  verify.rs  watchdog.rs
src/util/: clock_sync.rs  mod.rs  network_interfaces.rs  port_error.rs  ptp_config.rs  rtp_parse.rs  runtime_diag.rs  socket.rs  time.rs  tls.rs  url_parse.rs
src/util/cellular/: mod.rs  modem_manager.rs  rutos.rs
src/util/starlink/: grpc.rs  mod.rs
testbed/configs/: bond-gateway-smoke.json
tests/flow_scripts/: test_rtp_dual_sender.py
