[package]
name = "bilbycast-edge"
version = "0.8.0"
edition = "2024"
description = "Pure-Rust media gateway: RTP, SRT, RTMP, HLS, WebRTC with SMPTE 2022-1/7, TR-101290, and RP 2129"
license = "MPL-2.0"

[dependencies]
# Async runtime
tokio = { version = "1.51.0", features = ["full"] }
tokio-util = "0.7.18"

# HTTP framework
axum = { version = "0.8.8", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "4.6.0", features = ["derive"] }

# Time
chrono = "0.4.44"

# Concurrency
dashmap = "7.0.0-rc2"

# Byte buffers
bytes = "1.11.1"

# Enum utilities
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"

# Socket config
socket2 = "0.6.3"
libc = "0.2.184"

# Random
rand = "0.10.0"

# Pure-Rust audio sample rate conversion (used by the per-output PCM
# transcode stage in `engine::audio_transcode` to bridge mismatched
# ST 2110-30 / -31 / rtp_audio formats and feed the SMPTE 302M-over-SRT
# pipeline). No C deps.
rubato = "2.0.0"

# Error handling
anyhow = "1.0.102"

# Auth (JWT / HMAC-SHA256)
hmac = "0.12.1"
sha2 = "0.10.9"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"

# Secrets encryption at rest (AES-256-GCM for secrets.json)
aes-gcm = "0.11.0-rc.3"

# UUID for flow IDs
uuid = { version = "1.23.0", features = ["v4", "v5", "serde"] }

# WebSocket client for manager connection
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
webpki-roots = "1.0.6"
futures-util = "0.3.32"
url = "2.5.8"

# SRT native (pure Rust)
srt-transport = { path = "../bilbycast-srt/srt-transport" }
srt-protocol = { path = "../bilbycast-srt/srt-protocol" }

# QUIC transport for IP tunneling (relay and direct modes)
quinn = "0.11.9"
# rustls and rustls-pemfile are always needed (tunnel subsystem uses QUIC/TLS)
rustls = { version = "0.23.37", features = ["ring"] }
# AEAD encryption for end-to-end tunnel encryption (ChaCha20-Poly1305)
ring = "0.17.14"
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"

[features]
default = ["tls", "webrtc"]
# Enable TLS (HTTPS on API + RTMPS) support via rustls/tokio-rustls/axum-server.
tls = ["dep:tokio-rustls", "dep:axum-server"]
# Enable WebRTC WHIP/WHEP input and output via str0m (pure Rust, sans-I/O).
webrtc = ["dep:str0m", "dep:reqwest"]
# (SMPTE ST 2110 — Phase 1) Optional in-process PTP slave clock via the
# pure-Rust `statime` crate. The default deployment runs `ptp4l` (linuxptp)
# externally and bilbycast reads its management socket; this feature exists
# for simpler deployments that prefer a single-process model. The flag is
# wired through the build matrix in step 2; the actual `statime` integration
# (and dependency declaration) lands in a follow-up step. Until then the
# feature is a no-op marker — `cargo build --features ptp-internal` succeeds
# and the reporter still falls back to ptp4l.
ptp-internal = []

[dependencies.tokio-rustls]
version = "0.26.4"
optional = true

[dependencies.axum-server]
version = "0.8.0"
features = ["tls-rustls"]
optional = true

[dependencies.str0m]
version = "0.18.0"
optional = true

[dependencies.reqwest]
version = "0.13.2"
default-features = false
features = ["rustls"]
optional = true

[dependencies.retina]
version = "0.4.19"

# Pure-Rust mDNS-SD service registration for NMOS IS-04 discovery
# (`_nmos-node._tcp`). Best-effort: registration is gated at runtime so
# environments without multicast on the chosen interface degrade cleanly.
[dependencies.mdns-sd]
version = "0.19.0"

[dev-dependencies]
tempfile = "3.27.0"
