[package]
name = "bilbycast-edge"
version = "0.36.0"
edition = "2024"
description = "Pure-Rust media gateway: RTP, SRT, RTMP, HLS, WebRTC with SMPTE 2022-1/7, TR-101290, and RP 2129"
license = "AGPL-3.0-or-later"

[dependencies]
# Async runtime
tokio = { version = "1.52", features = ["full"] }
tokio-util = "0.7.18"
# Bridges `tokio::sync::mpsc::Receiver<T>` to `futures::Stream<Item=T>`,
# which reqwest::Body::wrap_stream expects (used by CMAF-LL chunked PUT).
tokio-stream = "0.1.18"

# HTTP framework
axum = { version = "0.8.9", features = ["ws"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# Logging
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }

# CLI
clap = { version = "4.6.1", features = ["derive"] }

# Time
chrono = "0.4.44"

# Concurrency
dashmap = "7.0.0-rc2"

# Byte buffers
bytes = "1.11.1"

# Enum utilities
strum = { version = "0.28.0", features = ["derive"] }
strum_macros = "0.28.0"

# Socket config
socket2 = "0.6.3"
libc = "0.2.186"

# Random
rand = "0.10.1"

# Pure-Rust audio sample rate conversion (used by the per-output PCM
# transcode stage in `engine::audio_transcode` to bridge mismatched
# ST 2110-30 / -31 / rtp_audio formats and feed the SMPTE 302M-over-SRT
# pipeline). No C deps.
rubato = "2.0.0"

# Pure-Rust audio codec decoder (used by `engine::audio_decode` to convert
# ── AAC backend ─────────────────────────────────────────────────────────
# Default: fdk-aac (C library via FFI). Supports AAC-LC, HE-AAC v1/v2,
# multichannel up to 7.1, AAC-LD/ELD. Used for both decode and encode.
# Fallback: symphonia (pure Rust, AAC-LC mono/stereo only).
#
# To disable fdk-aac: cargo build --no-default-features --features tls,webrtc
# ────────────────────────────────────────────────────────────────────────
aac-audio = { path = "../bilbycast-fdk-aac-rs/aac-audio", optional = true }
aac-codec = { path = "../bilbycast-fdk-aac-rs/aac-codec", optional = true }
symphonia = { version = "0.5.5", features = ["aac"], default-features = false }

# ── Video thumbnail backend ────────────────────────────────────────────
# Default: in-process video decode + JPEG encode via FFmpeg C libraries.
# Replaces the ffmpeg subprocess for thumbnail generation.
# Fallback: ffmpeg subprocess (when video-thumbnail feature is disabled).
#
# To disable: cargo build --no-default-features --features tls,webrtc,fdk-aac
# ────────────────────────────────────────────────────────────────────────
video-engine = { path = "../bilbycast-ffmpeg-video-rs/video-engine", optional = true }
video-codec = { path = "../bilbycast-ffmpeg-video-rs/video-codec", optional = true }

# System resource monitoring (CPU, RAM)
sysinfo = "0.38.4"

# Error handling
anyhow = "1.0.102"

# Auth (JWT / HMAC-SHA256)
hmac = "0.13.0"
sha2 = "0.11.0"
base64 = "0.22.1"
serde_urlencoded = "0.7.1"
subtle = "2.6"

# Secrets encryption at rest (AES-256-GCM for secrets.json)
aes-gcm = "0.11.0-rc.3"
# Pure-Rust CENC ciphers for CMAF output (Common Encryption ISO/IEC 23001-7):
#   cenc scheme → AES-128-CTR, cbcs scheme → AES-128-CBC with 1:9 block
#   pattern. RustCrypto audited crates, MIT/Apache-2.0. Tiny binary cost.
aes = "0.9"
ctr = "0.10"
cbc = "0.2"

# UUID for flow IDs
uuid = { version = "1.23.1", features = ["v4", "v5", "serde"] }

# WebSocket client for manager connection
tokio-tungstenite = { version = "0.29.0", features = ["rustls-tls-webpki-roots"] }
webpki-roots = "1.0.7"
futures-util = "0.3.32"
url = "2.5.8"

# ── SRT backend ──────────────────────────────────────────────────────────
# Uncomment ONE pair below. Both expose identical public APIs (SrtSocket,
# SrtListener, SrtStats, etc.). No other code changes needed to switch.
#
#   libsrt (default) — Haivision C library wrapper. Native SRT bonding,
#                       guaranteed FEC/encryption interop with all SRT devices.
#                       Requires: CMake, OpenSSL headers, clang (for build).
#
#   pure-rust        — bilbycast-srt. Zero C dependencies. FEC interop with
#                       non-Rust SRT peers is broken (encryption ordering).
#
# To switch: comment out the active pair, uncomment the other, cargo build.
# ─────────────────────────────────────────────────────────────────────────

# Active: Haivision libsrt wrapper (default)
srt-transport = { path = "../bilbycast-libsrt-rs/srt-transport" }
srt-protocol = { path = "../bilbycast-libsrt-rs/srt-protocol" }

# Alternative: Pure Rust (uncomment these, comment out the pair above)
# srt-transport = { path = "../bilbycast-srt/srt-transport" }
# srt-protocol = { path = "../bilbycast-srt/srt-protocol" }

# ── RIST backend ─────────────────────────────────────────────────────────
# Pure-Rust RIST Simple Profile (TR-06-1:2020). Zero C dependencies.
# Wire-verified interop with librist 0.2.11 (ristsender / ristreceiver).
# No feature flag — always compiled in, same treatment as SRT above.
# ─────────────────────────────────────────────────────────────────────────
rist-transport = { path = "../bilbycast-rist/rist-transport" }
rist-protocol = { path = "../bilbycast-rist/rist-protocol" }

# ── Bonding stack ────────────────────────────────────────────────────────
# Media-aware multi-path bonding (Peplink-class). Pure-Rust reassembly +
# scheduler; path transports include UDP, QUIC, and RIST. Edge consumes it
# to expose `BondedInputConfig` / `BondedOutputConfig` as new flow input /
# output variants. Non-bonded flows don't touch this code.
# ─────────────────────────────────────────────────────────────────────────
bonding-transport = { path = "../bilbycast-bonding/bonding-transport", default-features = false, features = ["path-udp", "path-rist", "path-quic"] }
bonding-protocol = { path = "../bilbycast-bonding/bonding-protocol" }

# QUIC transport for IP tunneling (relay and direct modes)
quinn = "0.11.9"
# rustls and rustls-pemfile are always needed (tunnel subsystem uses QUIC/TLS)
rustls = { version = "0.23.40", features = ["ring"] }
# AEAD encryption for end-to-end tunnel encryption (ChaCha20-Poly1305)
ring = "0.17.14"
rustls-pemfile = "2.2.0"
rcgen = "0.14.7"

# EBU R128 loudness + true-peak measurement for the Audio Full
# content-analysis tier. Pure-Rust (Sebastian Dröge's port of libebur128);
# no external C dependency.
ebur128 = "0.1"

# MP4 / MOV / MKV demuxer for the file-backed media-player input. Pure
# Rust, ISO-BMFF parser only (no encode / no decode); we feed the
# extracted ES through the existing TsMuxer. Used only when a flow has a
# `MediaPlayerSource::Mp4` source attached.
mp4 = "0.14"

# JPEG / PNG / WebP / GIF decoder for the still-image media-player
# source ("slate"). Pure Rust, default features off — we only need the
# common still formats and the YUV420P conversion lands inline.
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "bmp", "gif"] }

[features]
# `display` is in the default feature set: every Linux release variant
# (default + full) ships the local-display output. The optional `drm` /
# `alsa` / `udev` deps are themselves target-gated to `cfg(target_os =
# "linux")`, so a default `cargo build` on macOS still compiles cleanly
# (the optional deps simply aren't selected, and the runtime spawner
# refuses with `display_device_invalid`). On a headless Linux host the
# feature stays dormant — `enumerate_displays()` returns empty, the
# `"display"` capability isn't advertised, and the manager UI hides the
# option per-node.
default = ["tls", "webrtc", "fdk-aac", "video-thumbnail", "replay", "display"]
# Replay server: continuous flow recording to disk + playback as a fresh
# input. Adds the `recording` flow attribute and the `replay` input type.
# Pure-Rust, no new C deps. See `src/replay/` and `docs/replay.md`.
replay = []
# Enable in-process AAC decode/encode via Fraunhofer FDK AAC (C library).
# Replaces symphonia (decode) and ffmpeg subprocess (AAC encode).
fdk-aac = ["dep:aac-audio", "dep:aac-codec"]
# Enable in-process video decode + JPEG thumbnail via FFmpeg libavcodec/libswscale.
# Replaces the ffmpeg subprocess for thumbnail generation.
video-thumbnail = ["dep:video-engine", "dep:video-codec"]
# Enable libx264 H.264 video encoding inside the vendored FFmpeg build.
# **LICENSING:** libx264 is GPL v2+. Binaries built with this feature
# are an AGPL-3.0-or-later combined work (see NOTICE.full). Requires
# libx264-dev (or equivalent) installed on the host. Off by default;
# enabled by the `video-encoders-full` composite in the `*-full`
# release artefact.
video-encoder-x264 = ["video-thumbnail", "video-engine/video-encoder-x264"]
# Enable libx265 HEVC video encoding. Same licensing implications as
# `video-encoder-x264` (GPL v2+). Off by default.
video-encoder-x265 = ["video-thumbnail", "video-engine/video-encoder-x265"]
# Enable NVENC hardware H.264/HEVC encoding. Royalty-free at the API
# layer; requires an NVIDIA driver at runtime and nv-codec-headers at
# build time. Off by default.
video-encoder-nvenc = ["video-thumbnail", "video-engine/video-encoder-nvenc"]
# Enable Intel QuickSync hardware H.264/HEVC encoding via Intel oneVPL.
# Royalty-free at the API layer (libvpl headers + dispatcher are
# MIT/Apache); x86_64 only in practice. Requires `libvpl-dev` at build
# time and the Intel media driver + libvpl runtime on the host. Off by
# default.
video-encoder-qsv = ["video-thumbnail", "video-engine/video-encoder-qsv"]
# Bundle every video encoder backend (x264 + x265 + NVENC + QSV). Used
# by the GitHub Actions release matrix to produce the `*-full` artefact
# on x86_64. At runtime, operators pick the per-flow codec; NVENC
# activates only on hosts with NVIDIA driver + hardware, QSV only on
# hosts with an Intel iGPU + media driver, otherwise x264/x265 run on
# CPU. Inherits libx264's + libx265's GPL v2+ terms — the resulting
# binary is an AGPL-3.0-or-later combined work (see NOTICE.full).
# `aarch64` builds intentionally drop the QSV bundle (Intel iGPU is
# x86_64-only) and list the remaining three features explicitly in the
# release workflow.
video-encoders-full = [
    "video-encoder-x264",
    "video-encoder-x265",
    "video-encoder-nvenc",
    "video-encoder-qsv",
]
# Local-display output — decode the flow's video + audio and render to a
# Linux KMS connector (HDMI / DisplayPort) plus an ALSA audio device.
# Linux-only (the optional `drm` / `alsa` / `libudev` deps are
# target-gated below). Pulls in libdrm + libasound2 + libudev at link
# time; `apt install libdrm-dev libasound2-dev libudev-dev` (Debian /
# Ubuntu) or the equivalent RPM. Off by default so generic builds stay
# portable. Audio decode of MP2 / AC-3 / E-AC-3 / Opus rides through the
# `video-thumbnail` `AudioDecoder` (libavcodec). See
# `docs/configuration-guide.md` "Display output (HDMI / DisplayPort)".
display = [
    "dep:drm",
    "dep:alsa",
    "dep:udev",
    "video-thumbnail",
    "fdk-aac",
]
# v2 placeholder: hardware-decoded video on the display output via VAAPI
# (`video-engine` `decode-vaapi` feature). Listed here so the manager UI
# can advertise it on `HealthPayload.capabilities` once it lands; today
# the build fails fast with a `compile_error!` so we don't ship a
# half-finished path.
display-vaapi = ["display"]
# v2 placeholder: hardware-decoded video on the display output via NVDEC.
# Same shape as `display-vaapi`.
display-nvdec = ["display"]
# Enable TLS (HTTPS on API + RTMPS) support via rustls/tokio-rustls/axum-server.
tls = ["dep:tokio-rustls", "dep:axum-server"]
# Enable WebRTC WHIP/WHEP input and output via str0m (pure Rust, sans-I/O).
webrtc = ["dep:str0m"]
# Enable live NVIDIA NVENC / NVDEC utilization sampling via nvml-wrapper
# for the manager's resource-budget UI. Linux + Windows only (the dep is
# target-conditional). Off by default so a generic `cargo build` stays
# portable; enable on release builds for those platforms.
hardware-monitor-nvml = ["dep:nvml-wrapper"]
# (SMPTE ST 2110 — Phase 1) Optional in-process PTP slave clock via the
# pure-Rust `statime` crate. The default deployment runs `ptp4l` (linuxptp)
# externally and bilbycast reads its management socket; this feature exists
# for simpler deployments that prefer a single-process model. The flag is
# wired through the build matrix in step 2; the actual `statime` integration
# (and dependency declaration) lands in a follow-up step. Until then the
# feature is a no-op marker — `cargo build --features ptp-internal` succeeds
# and the reporter still falls back to ptp4l.
ptp-internal = []

[dependencies.tokio-rustls]
version = "0.26.4"
optional = true

[dependencies.axum-server]
version = "0.8.0"
features = ["tls-rustls"]
optional = true

[dependencies.str0m]
version = "0.18.1"
optional = true
# Use OpenSSL DTLS backend instead of the default aws-lc-rs + dimpl. The
# pure-Rust dimpl DTLS implementation stalls when the active side (WHEP
# client) is talking to a localhost passive server (str0m WHEP server) —
# DTLS handshake never reaches Connected even though ICE succeeds and the
# server's certificate is received. The OpenSSL backend uses a battle-tested
# DTLS stack and avoids this. Adds an OpenSSL build-time dep but bilbycast
# already links OpenSSL via libsrt-rs so no new system requirement.
default-features = false
features = ["openssl"]

[dependencies.reqwest]
version = "0.13.3"
default-features = false
# Used by:
#  - WebRTC WHIP client signaling (feature-gated imports inside engine::webrtc)
#  - CMAF output HTTP push ingest (segment / init / manifest PUTs)
# rustls is the only TLS backend; `stream` enables Body::wrap_stream for
# streaming uploads (CMAF-LL chunked transfer).
features = ["rustls", "stream"]

[dependencies.retina]
version = "0.4.19"

# Pure-Rust mDNS-SD service registration for NMOS IS-04 discovery
# (`_nmos-node._tcp`). Best-effort: registration is gated at runtime so
# environments without multicast on the chosen interface degrade cleanly.
[dependencies.mdns-sd]
version = "0.19.1"

[dev-dependencies]
tempfile = "3.27.0"

# NVIDIA NVML — live NVENC / NVDEC utilization for the resource-budget
# block on the manager UI. Optional; gated on the `hardware-monitor-nvml`
# feature. Linux + Windows targets only — the dep doesn't compile on
# macOS / BSD because it links libnvidia-ml at runtime. Enable explicitly
# on release builds for those targets; the rest stays cleanly opt-out.
[target.'cfg(any(target_os = "linux", target_os = "windows"))'.dependencies]
nvml-wrapper = { version = "0.12", optional = true }

# Local-display output — Linux-only (`drm` is libdrm/KMS, `alsa` is
# libasound2, `udev` is libudev for hotplug enumeration). All three are
# `optional = true` and gated by the `display` Cargo feature; non-Linux
# builds short-circuit `enumerate_displays()` to `Vec::new()` and never
# advertise the capability. Install: `apt install libdrm-dev
# libasound2-dev libudev-dev` on Debian / Ubuntu.
[target.'cfg(target_os = "linux")'.dependencies]
drm = { version = "0.14", optional = true }
alsa = { version = "0.9", optional = true }
udev = { version = "0.9", optional = true }

# ---------------------------------------------------------------------------
# BILBYCAST PATCH: vendored `is` 0.8.0 with the strict-PRIORITY check on ICE
# Binding Requests removed.
#
# Why: ffmpeg's WHIP muxer (and a few other production WHIP publishers)
# sends ICE connectivity-check Binding Requests without the PRIORITY
# attribute. RFC 5245 §7.1.2.1 says PRIORITY is mandatory, so it's
# technically a peer bug, but `is` 0.8.0 hard-rejects the packets at parse
# time and str0m never even sees them. The result is every ffmpeg-WHIP
# publish stalls in ICE, DTLS times out at 5 s, and no media flows. See
# the 2026-04-09 Bug A entry in testbed/QUALITY_REPORT.md.
#
# The patched `is` (only stun.rs differs from upstream — single hunk)
# lives in `vendor/is/`. The diff against upstream is a single
# comment-replacement block clearly marked `BILBYCAST PATCH`.
#
# WHEN UPGRADING str0m:
#   1. Run `cargo update -p str0m`. If str0m's new version still depends
#      on `is = "0.8"`, this patch keeps applying — done.
#   2. If `cargo build` emits `warning: Patch ... was not used in the
#      crate graph`, the patch's version range no longer matches. Either:
#        a) re-vendor the matching `is` version (copy from
#           ~/.cargo/registry/src/index.crates.io-*/is-X.Y.Z, re-apply
#           the same one-hunk diff in vendor/is/src/stun.rs, update this
#           comment and the path), OR
#        b) check whether upstream `is` (or str0m) finally landed a
#           permissive parser. If so, drop this entire
#           `[patch.crates-io]` section and the `vendor/is/` tree.
#   3. CI should grep the build output for `Patch .* was not used` and
#      fail on match — guards against silent regression on str0m bumps.
# ---------------------------------------------------------------------------
[patch.crates-io]
is = { path = "vendor/is" }
